# curry-frontend

./: .gitignore  CHANGELOG.md  LICENSE  LIESMICH  Makefile  TODO  curry-frontend.cabal  curry-frontend.cabal.orig  diamond.token  overview.md  uebersicht.md
data/: currysource.css
lib/curry/: Abstract.curry  AbstractPos.curry
src/: AbstractCurry.hs  AnsiCodes.hs  Arity.hs  Base.hi  Base.lhs  CCode.hi  CCode.lhs  CElim.hi  CElim.lhs  CGen.hi  CGen.lhs  CPS.hi  CPS.lhs  CPretty.hi  CPretty.lhs  Cam.hi  Cam.lhs  CamPP.hi  CamPP.lhs  CaseCompletion.hs  Checks.hs  Checks.hs.orig  Combined.hi  Combined.lhs  CompilerEnv.hs  CompilerEnv.hs.orig  CompilerOpts.hs  CompilerOpts.hs.orig  CompilerResults.hs  CurryAnsi.hs  CurryBuilder.hs  CurryBuilder.hs.orig  CurryBuilderOpts.hs  CurryCompiler.hs  CurryCompilerOpts.hs  CurryDeps.hi  CurryDeps.hs  CurryDeps.hs.orig  CurryDeps.lhs  CurryEnv.hs  (+155 more)
src/Base/: AnnotExpr.hs  Arity.hs  CurryKinds.hs  CurryTypes.hs  CurryTypes.lhs  CurryTypes.lhs.orig  ErrorMessages.hs  Eval.lhs  Expr.hs  Idents.hs  Import.hs  Import.lhs  KindSubst.hs  Kinds.hs  Messages.hs  Module.lhs  Names.hs  NestEnv.hs  NestEnv.lhs  OldScopeEnv.hs  OpPrec.lhs  PrettyKinds.hs  PrettyTypes.hs  SCC.hs  ScopeEnv.hs  Subst.hs  Subst.lhs  Subst.lhs.orig  TopEnv.hs  TopEnv.lhs  TypeConstructors.lhs  TypeExpansion.hs  TypeSubst.hs  TypeSubst.lhs  Types.hs  Types.lhs  Types.lhs.orig  Typing.hs  Typing.lhs  Utils.hs  (+2 more)
src/Check/: InterfaceCheck.hs  KindCheck.lhs  PrecCheck.lhs  SyntaxCheck.lhs  TypeCheck.lhs  WarnCheck.hs
src/Checks/: DeriveCheck.hs  Dictionaries.hs  ExportCheck.hs  ExtensionCheck.hs  ImportSyntaxCheck.hs  InstanceCheck.hs  InterfaceCheck.hs  InterfaceCheck.lhs  InterfaceCheck.lhs.orig  InterfaceSyntaxCheck.hs  InterfaceSyntaxCheck.lhs  InterfaceSyntaxCheck.lhs.orig  KindCheck.hs  KindCheck.lhs  PrecCheck.hs  PrecCheck.lhs  SyntaxCheck.hs  SyntaxCheck.lhs  SyntaxCheck.lhs.orig  TypeCheck.hs  TypeCheck.lhs  TypeCheck.lhs.orig  TypeClassesCheck.hs  TypeSyntaxCheck.hs  WarnCheck.hs  WarnCheck.hs.orig
src/Curry/: AbstractCurry.hs  ExtendedFlat.hs  ExtendedFlatGoodies.hs  ExtendedFlatTyping.hs  IL.hs  Syntax.hs  Syntax.lhs
src/Env/: Arity.hs  Class.hs  ClassEnv.hs  CurryEnv.hs  Eval.hs  Eval.lhs  Import.hs  InstEnv.hs  Instance.hs  Interface.hs  Interfaces.hs  Label.hs  Module.hs  ModuleAlias.hs  ModuleAliases.hs  NestEnv.lhs  OldScopeEnv.hs  OpPrec.hs  OpPrec.lhs  ScopeEnv.hs  TopEnv.lhs  Type.hs  TypeConstructor.hs  TypeConstructors.lhs  TypeEnv.hs  Value.hs  Value.hs.orig  Value.lhs
src/ExtendedFlat/: Pretty.hs
src/Files/: CymakePath.hs
src/Generators/: GenAbstractCurry.hs  GenAnnotatedFlatCurry.hs  GenFlatCurry.hs  GenFlatCurry.hs.orig  GenTypedFlatCurry.hs
src/Html/: CurryHtml.hs  SyntaxColoring.hs  SyntaxColoring.hs.orig  currydoc.css
src/IL/: CurryToIL.lhs  Pretty.hs  Pretty.lhs  Pretty.lhs.orig  ShowModule.hs  Type.hs  Type.lhs  Typing.hs  XML.lhs
src/Token/: TokenStream.hs
src/Transform/: CaseCompletion.hs  CurryToIL.lhs  Desugar.lhs  Lift.lhs  Qual.lhs  Simplify.lhs
src/Transformations/: CaseCompletion.hs  CaseCompletion.hs.orig  CurryToIL.hs  CurryToIL.lhs  Derive.hs  Desugar.hs  Desugar.lhs  Dictionaries.hs  Dictionary.hs  ExportSpec.hs  Lift.hs  Lift.lhs  Qual.hs  Qual.hs.orig  Qual.lhs  Simplify.hs  Simplify.lhs  TypeSigs.hs
src/Vintage/: AnsiCodes.hs  CGen.lhs  CPretty.lhs  CamPP.lhs  CurryAnsi.hs  FlatCurry.lhs  ILCompile.lhs  Set.lhs  config.hs  cyxml.hs-pattern
src/curry/: Makefile  clean  prelude.curry  prelude.patch
src/runtime/: Makefile  backtrack.c  backtrack.h  backtrack.tex  cam.h  cam.tex  char.c  char.h  char.tex  compare.c  compare.tex  config.h  constraints.c  constraints.tex  cstring.c  cstring.h  cstring.tex  curry.h  curry.tex  debug.h  debug.tex  directory.c  directory.tex  disequal.c  disequal.h  disequal.tex  eval.c  eval.h  eval.tex  files.c  files.h  files.tex  float.c  float.tex  gc_2space.c  gc_2space.tex  gc_compact.c  gc_compact.tex  heap.c  heap.h  (+55 more)
test/: .gitignore  AbstractCurryBug.curry  AnonymVar.curry  Bug1226.curry  Bug1276.curry  Bug445.lcurry  Bug480.curry  Bug489.lcurry  Bug494.curry  Bug780.curry  CaseLit.curry  ComparePrograms.sh  CompilerOpts.curry  Diamond.curry  Export1.curry  Export2.curry  Export3.curry  ExportAmbiguousErrors.curry  FP_Lifting.curry  FunctionalPatterns.curry  HaskellRecords.curry  Inline.curry  List2.curry  Main.curry  MissingCaseCompletion.curry  MultipleArities.curry  NegLit.curry  Newtype.curry  Newtype2.curry  NonExhaustivePattern.curry  NonLinearLHS.curry  OverlappingPatterns.curry  PatDecl.curry  PragmaRecords.curry  Qual.curry  RecIdent.curry  RecordTest.curry  RecordTest2.curry  RecordTest3.curry  RecursiveRecords.curry  (+16 more)
test/errors/: FunctionalPatterns.curry
test/exportcheck/: AmbiguousName.curry  AmbiguousType.curry  NoDataType.curry  OutsideTypeConstructor.curry  UndefinedElement.curry
test/fail/: Bool.curry  FP_Cyclic.curry  FP_NonGlobal.curry  FP_Restrictions.curry  KindCheck.curry  MultipleDefinitions.curry  MultiplePrecedence.curry  PatternRestrictions.curry  PragmaError.curry  RecordLabelIDs.curry  RecursiveTypeSyn.curry  TypedFreeVariables.curry
test/lib/: LocalModuleExport.curry
test/lib2/: UI2GUI.curry  sedScript
test/pass/: ACVisibility.curry  AnonymVar.curry  CaseComplete.curry  DefaultPrecedence.curry  ExplicitLayout.curry  FP_Lifting.curry  FP_NonCyclic.curry  FP_NonLinearity.curry  FunctionalPatterns.curry  HaskellRecords.curry  Hierarchical.curry  Infix.curry  Maybe.curry  Newtype1.curry  Newtype2.curry  NonLinearLHS.curry  OperatorDefinition.curry  RecordTest1.curry  RecordTest2.curry  RecordTest3.curry  RecordsPolymorphism.curry  ReexportTest.curry  SpaceLeak.curry  StringGap.curry
test/typeclasses/: A.curry  A.hs  AllOfAST.curry  Ambig1.curry  Ambig2.curry  AmbigDType1.curry  AmbigDType2.curry  AmbigDTypeImport.curry  Ambiguous.curry  Ambiguous2.curry  Ambiguous3.curry  AmbiguousTODO.curry  Annot1.curry  Annot1_orig.curry  Annot2.curry  Annot3.curry  Annot4.curry  Annot5.curry  Annot6.curry  Annot7.curry  Annot7_orig.curry  Arb.curry  (+163 more)
(+436 files in other folders)
