Name:          curry-frontend
Version:       0.4.1
Cabal-Version: >= 1.10
Synopsis:      Compile the functional logic language Curry to several
               intermediate formats
Description:   The Curry Frontend consists of the executable program "cymake".
               It is used by various backends to compile Curry programs to
               an internal representation.
               The code is a stripped-down version of an early version of
               the Muenster Curry Compiler
               (<http://danae.uni-muenster.de/~lux/curry/>)
Category:      Language
License:       OtherLicense
License-File:  LICENSE
Author:        Wolfgang Lux, Martin Engelke, Bernd Brassel, Holger Siegel,
               Bjoern Peemoeller
Maintainer:    Bjoern Peemoeller
Bug-Reports:   mailto:bjp@informatik.uni-kiel.de
Homepage:      http://curry-language.org
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files: LIESMICH

Data-Dir:   data
Data-Files: currysource.css

source-repository head
  type:     git
  location: git://git-ps.informatik.uni-kiel.de/curry/curry-frontend.git

Flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

Library
  hs-source-dirs:   src
  default-language:  Haskell2010
  Build-Depends:
      base == 4.*
    , containers
    , curry-base == 0.4.1
    , directory
    , filepath
    , mtl
    , process
    , syb
    , transformers
  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    build-depends: network < 2.6
  Exposed-Modules:
      Base.CurryTypes
    , Base.Expr
    , Base.Messages
    , Base.NestEnv
    , Base.SCC
    , Base.ScopeEnv
    , Base.Subst
    , Base.TopEnv
    , Base.Types
    , Base.TypeSubst
    , Base.Typing
    , Base.Utils
    , Checks
    , Checks.ExportCheck
    , Checks.InterfaceCheck
    , Checks.InterfaceSyntaxCheck
    , Checks.ImportSyntaxCheck
    , Checks.KindCheck
    , Checks.PrecCheck
    , Checks.SyntaxCheck
    , Checks.TypeCheck
    , Checks.WarnCheck
    , CompilerEnv
    , CompilerOpts
    , CurryBuilder
    , CurryDeps
    , Env.Interface
    , Env.ModuleAlias
    , Env.OpPrec
    , Env.TypeConstructor
    , Env.Value
    , Exports
    , Files.CymakePath
    , Generators
    , Generators.GenAbstractCurry
    , Generators.GenFlatCurry
    , Html.CurryHtml
    , Html.SyntaxColoring
    , IL
    , IL.Pretty
    , IL.ShowModule
    , IL.Type
    , Imports
    , Interfaces
    , Modules
    , ModuleSummary
    , Token.TokenStream
    , Transformations
    , Transformations.CaseCompletion
    , Transformations.CurryToIL
    , Transformations.Desugar
    , Transformations.Lift
    , Transformations.Qual
    , Transformations.Simplify
  Other-Modules:
    Paths_curry_frontend
  ghc-options:       -Wall

Executable cymake
  hs-source-dirs: src
  Main-is:        cymake.hs
  default-language:  Haskell2010
  Build-Depends:
      base == 4.*
    , containers
    , curry-base == 0.4.1
    , curry-frontend
    , directory
    , filepath
    , mtl
    , process
    , syb
    , transformers
  if flag(network-uri)
    build-depends: network-uri >= 2.6
  else
    build-depends: network < 2.6
  ghc-options: -Wall

Test-Suite test-frontend
  type:           detailed-0.9
  hs-source-dirs: test
  default-language:  Haskell2010
  test-module:    TestFrontend
  build-depends:  base == 4.*, Cabal >= 1.20, curry-base == 0.4.1
    , curry-frontend == 0.4.1, filepath
